[tool.poetry]
name = "phenotype-feature-engineer"
version = "0.1.0"
description = ""
authors = ["taejunsong <songtj10@snu.ac.kr>"]
readme = "README.md"
packages = [{include = "phenotype_feature_engineer"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.1.4"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

